k8s-setup/gatekeeper/adminlabel.yaml

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirelabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequireLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirelabels

        violation[{"msg": msg}] {
          labels := input.review.object.metadata.labels
          required_label := {"role": "admin"}

          not contains(labels, required_label)
          
          msg := "All resources must have the 'role=admin' label."
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireLabels
metadata:
  name: require-admin-label
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["Role", "RoleBinding", "ClusterRole", "ClusterRoleBinding"]
