k8s-setup/gatekeeper/disallow_dockerhub.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowedimages
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowedImages
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowedimages

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          startswith(container.image, "docker.io")
          msg := sprintf("Docker Hub images are not allowed: %v", [container.image])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedImages
metadata:
  name: disallow-dockerhub-images
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
